--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body{
     font-family: 'Baloo 2','Ubuntu','Segoe UI','Roboto','sans-serif';
 }
+
+.title{
+    background-color: #333;
+    overflow: hidden; 
+}
+
+.title p {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
