--- a/style.css
+++ b/style.css
@@ -4,11 +4,10 @@ body{
 
 .title{
     background-color: #333;
-    overflow: hidden; 
 }
 
-.title p {
-    float: left;
+.title h1 {
+    float: center;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
