--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body{
 .title{
     background-color: #333;
     display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    position: fixed;
+    z-index: 1000;
 }
 
 .title h1 {
@@ -14,4 +19,5 @@ body{
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    margin: 0px
 }
