--- a/style.css
+++ b/style.css
@@ -40,3 +40,23 @@ h3{
 p{
     font-size: 18px;
 }
+
+.bananas{
+    font-size: 24px;
+    text-align: left;
+    margin: 0px;
+}
+
+.bananas p{
+    margin: 0px;
+    font-size: 18px;
+}
+
+.button{
+    font-size: 18px;
+    padding: 10px 10px;
+    border-radius: 10px;
+    background: linear-gradient(to bottom, #FFFFFF #C6C9D3);
+    display: block;
+    width: 50%;
+}
