--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     position: fixed;
     z-index: 1000;
     border-radius: 0px 0px 25px 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
 }
 
 .title h1 {
@@ -38,25 +39,33 @@ h3{
 }
 
 p{
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .bananas{
-    font-size: 24px;
+    font-size: 22px;
     text-align: left;
     margin: 0px;
+    margin-left: 10px;
+    margin-top: 50px;
 }
 
-.bananas p{
+.banana{
     margin: 0px;
     font-size: 18px;
+    margin-left: 10px;
 }
 
-.button{
-    font-size: 18px;
-    padding: 10px 10px;
+.button {
+    background: linear-gradient(to bottom, #FF7758, #D15544);
+    border: none;
+    color: white;
+    padding: 12px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
     border-radius: 10px;
-    background: linear-gradient(to bottom, #FFFFFF #C6C9D3);
-    display: block;
-    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
+    margin-left: 10px;
 }
