--- a/style.css
+++ b/style.css
@@ -68,4 +68,5 @@ p{
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
     margin-left: 10px;
+    margin-bottom: 10px;
 }
